fixed so deer is correctly invisible when animation is done

--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -859,18 +859,16 @@ html {
     }
 
     80%,
-    99%,
-    100% {
+    99% {
+        visibility: visible;
         bottom: 13vw;
         left: 90%;
     }
 
-    99% {
-        opacity: 1;
-    }
-
     100% {
-        opacity: 0;
+        visibility: hidden;
+        bottom: 13vw;
+        left: 90%;
     }
 
 }
